--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
     "typedoc": "^0.20.35",
-    "typescript": "^4.2.4"
+    "typescript": "4.2.4"
   },
   "scripts": {
     "test": "jest",
