--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test": "jest",
     "compile": "tsc",
     "prepare": "tsc",
-    "doc": "typedoc src/types.ts src/attacks.ts src/util.ts src/squareSet.ts src/board.ts src/setup.ts src/chess.ts src/compat.ts src/debug.ts src/fen.ts src/hash.ts src/san.ts src/transform.ts src/variant.ts",
+    "doc": "typedoc src/types.ts src/attacks.ts src/util.ts src/fp.ts src/squareSet.ts src/board.ts src/setup.ts src/chess.ts src/compat.ts src/debug.ts src/fen.ts src/hash.ts src/san.ts src/transform.ts src/variant.ts",
     "lint": "eslint src/*.ts",
     "format": "prettier --write .",
     "check-format": "prettier --check ."
@@ -64,6 +64,7 @@
     "squareSet.d.ts",
     "types.d.ts",
     "util.d.ts",
+    "fp.d.ts",
     "debug.d.ts",
     "fen.d.ts",
     "san.d.ts",
@@ -79,6 +80,7 @@
     "squareSet.js.map",
     "types.js.map",
     "util.js.map",
+    "fp.js.map",
     "debug.js.map",
     "fen.js.map",
     "san.js.map",
@@ -94,6 +96,7 @@
     "src/squareSet.ts",
     "src/types.ts",
     "src/util.ts",
+    "src/fp.ts",
     "src/debug.ts",
     "src/fen.ts",
     "src/san.ts",
