--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ package-lock.json
 /util.js
 /debug.js
 /fen.js
+/fp.js
 /san.js
 /hash.js
 /index.js
@@ -31,6 +32,7 @@ package-lock.json
 /util.d.ts
 /debug.d.ts
 /fen.d.ts
+/fp.d.ts
 /san.d.ts
 /hash.d.ts
 /index.d.ts
@@ -47,6 +49,7 @@ package-lock.json
 /util.js.map
 /debug.js.map
 /fen.js.map
+/fp.js.map
 /san.js.map
 /hash.js.map
 /index.js.map
