feat(PLA-840): add breakthrough, minibreakthrough

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,14 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "target": "ES2017",
     "lib": ["ES2017"],
     "module": "commonjs",
-    "outDir": "",
-    "declarationDir": "",
+    "outDir": "./build/",
+    "baseUrl": "src",
+    "declarationDir": "./build/",
+    "declarationMap": true,
     "declaration": true,
     "sourceMap": true
   },
