--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stratops",
-  "version": "0.8.1-pstrat4.2",
+  "version": "0.8.1-pstrat4.3",
   "description": "Strategy game rules and operations",
   "keywords": [
     "chess",
@@ -26,7 +26,6 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
-    "ts-node": "^10.9.2",
     "typedoc": "^0.23.22",
     "typescript": "4.8.4"
   },
@@ -40,8 +39,70 @@
     "check-format": "prettier --check ."
   },
   "files": [
-    "build/**/*",
-    "src/**/*"
+    "attacks.js",
+    "board.js",
+    "chess.js",
+    "compat.js",
+    "variant.js",
+    "transform.js",
+    "setup.js",
+    "squareSet.js",
+    "types.js",
+    "util.js",
+    "fp.js",
+    "debug.js",
+    "fen.js",
+    "san.js",
+    "hash.js",
+    "index.js",
+    "attacks.d.ts",
+    "board.d.ts",
+    "chess.d.ts",
+    "compat.d.ts",
+    "variant.d.ts",
+    "transform.d.ts",
+    "setup.d.ts",
+    "squareSet.d.ts",
+    "types.d.ts",
+    "util.d.ts",
+    "fp.d.ts",
+    "debug.d.ts",
+    "fen.d.ts",
+    "san.d.ts",
+    "hash.d.ts",
+    "index.d.ts",
+    "attacks.js.map",
+    "board.js.map",
+    "chess.js.map",
+    "compat.js.map",
+    "variant.js.map",
+    "transform.js.map",
+    "setup.js.map",
+    "squareSet.js.map",
+    "types.js.map",
+    "util.js.map",
+    "fp.js.map",
+    "debug.js.map",
+    "fen.js.map",
+    "san.js.map",
+    "hash.js.map",
+    "index.js.map",
+    "src/attacks.ts",
+    "src/board.ts",
+    "src/chess.ts",
+    "src/compat.ts",
+    "src/variant.ts",
+    "src/transform.ts",
+    "src/setup.ts",
+    "src/squareSet.ts",
+    "src/types.ts",
+    "src/util.ts",
+    "src/fp.ts",
+    "src/debug.ts",
+    "src/fen.ts",
+    "src/san.ts",
+    "src/hash.ts",
+    "src/index.ts"
   ],
   "jest": {
     "transform": {
