--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,14 +7,11 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "moduleResolution": "node",
-    "resolveJsonModule": true,
     "target": "ES2017",
     "lib": ["ES2017"],
     "module": "commonjs",
-    "outDir": "./build/",
-    "baseUrl": "src",
-    "declarationDir": "./build/",
-    "declarationMap": true,
+    "outDir": "",
+    "declarationDir": "",
     "declaration": true,
     "sourceMap": true
   },
