--- a/package.json
+++ b/package.json
@@ -13,100 +13,75 @@
   "repository": "https://github.com/Mind-Sports-Games/stratops",
   "author": "playstrategy.org",
   "license": "GPL-3.0-or-later",
-  "type": "commonjs",
+  "engines": {
+    "node": ">=20",
+    "pnpm": "^9"
+  },  
+  "type": "module",
+  "module": "dist/esm/index.js",
+  "main": "dist/cjs/index.js",
+  "types": "index.d.ts",  
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/types/*"
+      ]
+    }
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/types/index.d.ts"
+    },
+    "./*": {
+      "import": "./dist/esm/*.js",
+      "require": "./dist/cjs/*.js",
+      "types": "./dist/types/*.d.ts"
+    }
+  },  
   "sideEffects": false,
   "dependencies": {
-    "@badrap/result": "^0.2.8"
-  },
-  "devDependencies": {
+    "@badrap/result": "^0.2.8",
+    "@jest/globals": "^29.7.0",
     "@types/jest": "^26.0.22",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.23.0",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
-    "ts-jest": "^26.5.4",
-    "typedoc": "^0.23.22",
-    "typescript": "4.8.4"
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "dprint": "^0.45",
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.3",
+    "typedoc": "^0.26.5",
+    "typescript": "^5.4.5"
   },
   "scripts": {
-    "test": "jest",
-    "compile": "tsc",
-    "prepare": "tsc",
-    "doc": "typedoc src/types.ts src/attacks.ts src/util.ts src/fp.ts src/squareSet.ts src/board.ts src/setup.ts src/chess.ts src/compat.ts src/debug.ts src/fen.ts src/hash.ts src/san.ts src/transform.ts src/variant.ts",
+    "prepare": "tsc --declarationDir dist/types && tsc --outDir dist/cjs --module commonjs --declaration false",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "doc": "typedoc src/types.ts src/attacks.ts src/util.ts src/squareSet.ts src/board.ts src/setup.ts src/chess.ts src/compat.ts src/debug.ts src/fen.ts src/san.ts src/transform.ts src/variant.ts src/pgn.ts",
     "lint": "eslint src/*.ts",
-    "format": "prettier --write .",
-    "check-format": "prettier --check ."
+    "format": "dprint fmt",
+    "check-format": "dprint check"
   },
   "files": [
-    "attacks.js",
-    "board.js",
-    "chess.js",
-    "compat.js",
-    "variant.js",
-    "transform.js",
-    "setup.js",
-    "squareSet.js",
-    "types.js",
-    "util.js",
-    "fp.js",
-    "debug.js",
-    "fen.js",
-    "san.js",
-    "hash.js",
-    "index.js",
-    "attacks.d.ts",
-    "board.d.ts",
-    "chess.d.ts",
-    "compat.d.ts",
-    "variant.d.ts",
-    "transform.d.ts",
-    "setup.d.ts",
-    "squareSet.d.ts",
-    "types.d.ts",
-    "util.d.ts",
-    "fp.d.ts",
-    "debug.d.ts",
-    "fen.d.ts",
-    "san.d.ts",
-    "hash.d.ts",
-    "index.d.ts",
-    "attacks.js.map",
-    "board.js.map",
-    "chess.js.map",
-    "compat.js.map",
-    "variant.js.map",
-    "transform.js.map",
-    "setup.js.map",
-    "squareSet.js.map",
-    "types.js.map",
-    "util.js.map",
-    "fp.js.map",
-    "debug.js.map",
-    "fen.js.map",
-    "san.js.map",
-    "hash.js.map",
-    "index.js.map",
-    "src/attacks.ts",
-    "src/board.ts",
-    "src/chess.ts",
-    "src/compat.ts",
-    "src/variant.ts",
-    "src/transform.ts",
-    "src/setup.ts",
-    "src/squareSet.ts",
-    "src/types.ts",
-    "src/util.ts",
-    "src/fp.ts",
-    "src/debug.ts",
-    "src/fen.ts",
-    "src/san.ts",
-    "src/hash.ts",
-    "src/index.ts"
+    "/src",
+    "/dist",
+    "!/**/*.test.*"
   ],
   "jest": {
+    "testRegex": ".*\\.test\\.ts$",
     "transform": {
-      "\\.ts$": "ts-jest"
+      "\\.ts$": [
+        "ts-jest",
+        {
+          "useESM": true
+        }
+      ]
+    },
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
+    "moduleNameMapper": {
+      "^(.*)\\.js$": "$1"
     }
   }
 }
