--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "moduleResolution": "node",
-    "target": "ES2017",
-    "lib": ["ES2017"],
-    "module": "commonjs",
-    "outDir": "",
-    "declarationDir": "",
+    "target": "ES2018",
+    "lib": ["ES2018"],
+    "module": "esnext",
+    "esModuleInterop": true,
+    "outDir": "dist/esm",
     "declaration": true,
     "sourceMap": true
   },
