--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -21,9 +21,17 @@ jobs:
       - name: Check Passed
         run: echo The actor is an organization member
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-      - run: npm install
-      - run: npm run doc && touch docs/.nojekyll
+      - name: install Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Install PNPM and run pnpm install
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: |
+            - recursive: false
+              args: [--no-frozen-lockfile, --strict-peer-dependencies]
+      - run: pnpm run doc && touch docs/.nojekyll
       - uses: maxheld83/ghpages@v0.3.0
         env:
           BUILD_DIR: 'docs/'
