--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,14 @@ jobs:
       - name: Check Passed
         run: echo The actor is an organization member
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-      - run: npm install
-      - run: npm test
+      - name: install Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Install PNPM and run pnpm install
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: |
+            - recursive: false
+              args: [--no-frozen-lockfile, --strict-peer-dependencies]
+      - run: pnpm test
