--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -30,9 +30,8 @@ jobs:
         with:
           run_install: |
             - recursive: false
-              args: [--no-frozen-lockfile, --strict-peer-dependencies]
       - run: pnpm run doc && touch docs/.nojekyll
       - uses: maxheld83/ghpages@v0.3.0
         env:
-          BUILD_DIR: 'docs/'
+          BUILD_DIR: "docs/"
           GH_PAT: ${{ secrets.GH_PAT }}
