--- a/package.json
+++ b/package.json
@@ -43,18 +43,18 @@
     "pnpm": "^9"
   },
   "dependencies": {
-    "@badrap/result": "^0.2"
+    "@badrap/result": "^0.2.13"
   },
   "devDependencies": {
-    "@jest/globals": "^29",
-    "@typescript-eslint/eslint-plugin": "^7",
-    "@typescript-eslint/parser": "^7",
-    "dprint": "^0.45",
-    "eslint": "^8",
+    "@jest/globals": "^29.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "dprint": "^0.45.1",
+    "eslint": "^8.57.1",
     "jest": "^26.6.3",
-    "ts-jest": "^26.5.4",
-    "typedoc": "^0.23",
-    "typescript": "4.9"
+    "ts-jest": "^26.5.6",
+    "typedoc": "^0.23.28",
+    "typescript": "~4.9.5"
   },
   "scripts": {
     "prepare": "tsc --declarationDir dist/types && tsc --outDir dist/cjs --module commonjs --declaration false",
