--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prepare": "tsc --declarationDir dist/types && tsc --outDir dist/cjs --module commonjs --declaration false",
     "test": "node node_modules/jest/bin/jest.js",
     "doc": "typedoc src/types.ts src/attacks.ts src/util.ts src/squareSet.ts src/board.ts src/setup.ts src/chess.ts src/compat.ts src/debug.ts src/fen.ts src/san.ts src/transform.ts src/variant.ts src/pgn.ts",
+    "link": "node --env-file=.env.local ./build.js --link",
     "lint": "eslint src/*.ts",
     "format": "dprint fmt",
     "check-format": "dprint check"
