feat: split variants per game family
_ add some tests for minishogi promotions
_ migrate some lila ui notation to stratops
_ 1 util entry point to access the Variant : getClassFromRules()
_ no implicit override and no unused parameters

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,10 @@
     "moduleResolution": "node",
     "noEmitOnError": true,
     "noImplicitAny": true,
+    "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
+    "noUnusedParameters": true,
     "outDir": "dist/esm",
     "strict": true,
     "strictPropertyInitialization": false,
