--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "dprint": "^0.45",
     "eslint": "^8",
     "jest": "^27.1",
+    "rimraf": "^6.0.1",
     "ts-jest": "^27.1.5",
     "typedoc": "^0.23",
     "typescript": "4.9"
   },
   "scripts": {
+    "clean": "rimraf dist",
     "prepare": "tsc --declarationDir dist/types && tsc --outDir dist/cjs --module commonjs --declaration false",
     "test": "node node_modules/jest/bin/jest.js",
     "doc": "typedoc src/types.ts src/attacks.ts src/util.ts src/squareSet.ts src/board.ts src/setup.ts src/chess.ts src/compat.ts src/debug.ts src/fen.ts src/san.ts src/transform.ts src/variant.ts src/pgn.ts",
