feat: add notation style
- get notation code (and tests) from lila, dispatched to their respective game
  family
- place tests in a __test__ folder
- fix xiangqi typo (swapped height and width) introduced recently by myself
- change lint style to have consistent type imports

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,14 @@
     "no-duplicate-imports": "error",
     "eqeqeq": ["error", "smart"],
     "prefer-const": "warn",
+    "@typescript-eslint/consistent-type-imports": [
+      "error",
+      {
+        "fixStyle": "inline-type-imports",
+        "prefer": "type-imports",
+        "disallowTypeAnnotations": false
+      }
+    ],
     "@typescript-eslint/no-empty-function": ["error", { "allow": ["constructors"] }],
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
