feat: PLA-1265: Amazons in board editor
fix: getVariantKeys

style: pnpm format

WIP: rewrite to have clean history

style: pnpm format

style: reword and move code

- use the concept of Action
- move code to gameFamily when possible

style: pnpm format

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "sideEffects": false,
   "engines": {
-    "node": ">=20.19.4 <=22.19.0",
+    "node": "^20.19.4",
     "pnpm": "^10.17.0"
   },
   "packageManager": "pnpm@10.17.0",
