Update version for dameo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stratops",
-  "version": "0.8.1-pstrat5.7dameo5",
+  "version": "0.8.1-pstrat5.7-dameo",
   "description": "Strategy game rules and operations",
   "keywords": [
     "chess",
