--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stratops",
-  "version": "0.8.1-pstrat5.21-d2",
+  "version": "0.8.1-pstrat5.22",
   "description": "Strategy game rules and operations",
   "keywords": [
     "chess",
